# InfoRecon

./: .gitignore  README.md  README_SERVICES.md  config.toml.example  docker-compose.yml  main.py  playsearch.py  pyproject.toml  result.md  run.py  run_api.py
app/: config.py  main.py
app/api/: dns_router.py  ip_router.py  web_search_router.py
app/cache/: __init__.py  cache_decorator.py  redis_cache.py
app/schema/: __init__.py  dns_schema.py  ip_schema.py  web_search_schema.py
app/services/: __init__.py  dns_service.py  ip_service.py  web_search_service.py  web_serch.py
data/GeoLite2-Country/: 20251021.txt
